--- a/ex05.html
+++ b/ex05.html
@@ -1,14 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
 	<meta charset="UTF-8">
-	<title>코드 2-10 루비문자 51페이지</title>
+	<title>Test.html</title>
 </head>
 <body>
-	<ruby>
-		<span> 大韓民國 </span>
-		<!--rt: 글자 위에 위치하는 작은 문자태그-->
-		<rt>대한민국</rt>
-	</ruby>
+	<table border="1">
+	<tr>
+		<td colspan="3"> 1, 2, 3 </td>
+		<td> 4 </td>
+		<td> 5 </td>
+		<td> 6 </td>
+	</tr>
+	<tr>
+		<td> 7 </td>
+		<td> 8 </td>
+		<td colspan="2"> 9, 10 </td>
+		<td> 11 </td>
+		<td rowspan="2"> 12, 18 </td>
+	</tr>
+	<tr>
+		<td> 13 </td>
+		<td rowspan="3"> 14, 20, 26 </td>
+		<td> 15 </td>
+		<td> 16 </td>
+		<td> 17 </td>
+	</tr>
+	<tr>
+		<td> 19 </td>
+		<td> 21 </td>
+		<td> 22 </td>
+		<td> 23 </td>
+		<td> 24 </td>
+	</tr>
+	<tr>
+		<td> 25 </td>
+		<td> 27 </td>
+		<td> 28 </td>
+		<td> 29 </td>
+		<td> 30 </td>
+
+	</tr>
+
 </body>
 </html>
